--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,9 @@ amazon:
     access-key-id: ${AWS_ACCESS_KEY_ID}
     secret-access-key: ${AWS_SECRET_ACCESS_KEY}
 kafka:
-  bootstrap-servers: ['localhost:29092']
+  bootstrap-servers: ['kafka:9092']
+  group-name:
+    input: ${KAFKA_INPUT_GROUP_NAME}
   topic-name:
     input: ${KAFKA_INPUT_TOPIC}
     output: ${KAFKA_OUTPUT_TOPIC}
